--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "colors": "^1.4.0",
     "express": "^4.18.2",
     "file-system": "^1.2.2",
+    "mongodb": "^6.3.0",
     "nodemon": "^3.0.2",
     "simple-node-logger": "^21.8.12"
   }
