--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,12 @@
     "colors": "^1.4.0",
     "express": "^4.18.2",
     "file-system": "^1.2.2",
+    "install": "^0.13.0",
     "mongodb": "^6.3.0",
-    "nodemon": "^3.0.2",
+    "nodejs": "^0.0.0",
     "simple-node-logger": "^21.8.12"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
